--- a/index.html
+++ b/index.html
@@ -1,22 +1,31 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Patrol Login</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-
-<h2>Supervisor Login</h2>
-
-<input id="user" placeholder="Username">
-<input id="pass" type="password" placeholder="Password">
-<button onclick="login()">Login</button>
-
 <script>
+const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwPCTQWKa5NayMRvPJnlcxv7ZnscfpLL_qTysis_zYKFqlbAWEB7KKHx9ulQqZeser99w/exec";
+
 function login() {
-  localStorage.setItem("user", user.value);
-  localStorage.setItem("pass", pass.value);
-  location.href = "form.html";
+  const username = document.getElementById("user").value;
+  const password = document.getElementById("pass").value;
+
+  fetch(SCRIPT_URL, {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({
+      username: username,
+      password: password
+    })
+  })
+  .then(res => res.json())
+  .then(data => {
+    if (data.status === "success") {
+      localStorage.setItem("user", username);
+      location.href = "form.html";
+    } else {
+      alert("Invalid username or password");
+    }
+  })
+  .catch(err => {
+    alert("Login error");
+    console.error(err);
+  });
 }
 
 if ("serviceWorker" in navigator) {
@@ -26,3 +35,4 @@ if ("serviceWorker" in navigator) {
 
 </body>
 </html>
+
