--- a/index.html
+++ b/index.html
@@ -13,16 +13,41 @@
 <button onclick="login()">Login</button>
 
 <script>
+const SCRIPT_URL = "PASTE_YOUR_WEB_APP_URL_HERE";
+
 function login() {
-  localStorage.setItem("user", user.value);
-  localStorage.setItem("pass", pass.value);
-  location.href = "form.html";
-}
+  const username = document.getElementById("user").value;
+  const password = document.getElementById("pass").value;
+
+  fetch(SCRIPT_URL, {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({
+      username: username,
+      password: password
+    })
+  })
+  .then(res => res.json())
+  .then(data => {
+    if (data.status === "success") {
+      localStorage.setItem("user", username);
+      location.href = "form.html";
+    } else {
+      alert("Invalid username or password");
+    }
+  })
+  .catch(err => {
+    alert("Login error");
+    console.error(err);
+  });
+
+
 
 if ("serviceWorker" in navigator) {
   navigator.serviceWorker.register("service-worker.js");
 }
 </script>
-
+}
 </body>
 </html>
+
