--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <button onclick="login()">Login</button>
 
 <script>
-const SCRIPT_URL = "PASTE_YOUR_WEB_APP_URL_HERE";
+const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbyfs9hiYIC50xxhLG6fmpe6ZLDrBPZr4G6sHTjzj57KOMeLhyLFYCzGi-PP0VqJgnnDdA/exec";
 
 function login() {
   const username = document.getElementById("user").value;
@@ -50,4 +50,5 @@ if ("serviceWorker" in navigator) {
 }
 </body>
 </html>
+
 
