--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Supervisor Login</title>
+  <title>Patrol Visit</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -46,14 +47,10 @@ function login() {
     console.error(err);
   });
 
-
-
-if ("serviceWorker" in navigator) {
-  navigator.serviceWorker.register("service-worker.js");
-}
 </script>
 </body>
 </html>
+
 
 
 
