--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Patrol Visit</title>
+  <title>Patrol Login</title>
   <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -10,51 +11,44 @@
 
 <input id="user" placeholder="Username">
 <input id="pass" type="password" placeholder="Password">
-
-<button id="loginBtn">Login</button>
-
-<p id="msg" style="color:red;"></p>
+<button type="button" onclick="login()">Login</button>
 
 <script>
 const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbyfs9hiYIC50xxhLG6fmpe6ZLDrBPZr4G6sHTjzj57KOMeLhyLFYCzGi-PP0VqJgnnDdA/exec";
 
-document.getElementById("loginBtn").addEventListener("click", login);
-
 function login() {
-  const username = document.getElementById("user").value.trim();
-  const password = document.getElementById("pass").value.trim();
-  const msg = document.getElementById("msg");
-
-  msg.innerText = "";
+  const username = document.getElementById("user").value;
+  const password = document.getElementById("pass").value;
 
   fetch(SCRIPT_URL, {
     method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ username, password })
+    body: JSON.stringify({
+      action: "login",   // 🔑 IMPORTANT
+      username: username,
+      password: password
+    })
   })
   .then(res => res.json())
   .then(data => {
     if (data.status === "success") {
-      sessionStorage.setItem("loggedIn", "true");
-      sessionStorage.setItem("user", username);
-      window.location.href = "form.html";
+      localStorage.setItem("user", username);
+      localStorage.setItem("pass", password);
+      window.location.href = "form.html";   // ✅ ONLY on success
     } else {
-      msg.innerText = "Invalid username or password";
+      alert("Invalid username or password");
     }
   })
   .catch(err => {
-    msg.innerText = "Server error";
+    alert("Login error");
     console.error(err);
   });
+}
 
+// Service Worker
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("service-worker.js");
+}
 </script>
+
 </body>
 </html>
-
-
-
-
-
-
-
-
