--- a/form.html
+++ b/form.html
@@ -15,8 +15,8 @@
   <option>Warehouse</option>
 </select>
 
-<label><input type="checkbox" value="Clean" class="chk"> Clean</label>
-<label><input type="checkbox" value="Secure" class="chk"> Secure</label>
+<label><input type="checkbox" class="chk" value="Clean"> Clean</label>
+<label><input type="checkbox" class="chk" value="Secure"> Secure</label>
 
 <textarea id="remarks" placeholder="Remarks"></textarea>
 
