--- a/form.html
+++ b/form.html
@@ -28,8 +28,8 @@
     <label>Checklist</label>
     <div class="checklist">
       <label>
-        <input type="checkbox" class="chk" value="Clean">
-        Clean
+        Clean<input type="checkbox" class="chk" value="Clean">
+        
       </label>
       <label>
         <input type="checkbox" class="chk" value="Secure">
@@ -60,3 +60,4 @@
   <script src="js/app.js"></script>
 </body>
 </html>
+
