--- a/form.html
+++ b/form.html
@@ -28,8 +28,8 @@
     <label>Checklist</label>
     <div class="checklist">
       <label>
-        Clean<input type="checkbox" class="chk" value="Clean">
-        
+        <input type="checkbox" class="chk" value="Clean">
+        Clean
       </label>
       <label>
         <input type="checkbox" class="chk" value="Secure">
@@ -60,4 +60,5 @@
   <script src="js/app.js"></script>
 </body>
 </html>
+
 
