--- a/form.html
+++ b/form.html
@@ -25,17 +25,17 @@
     </select>
 
     <!-- Checklist -->
-    <label>Checklist</label>
     <div class="checklist">
-      <label>
-        <input type="checkbox" class="chk" value="Clean">
-        Clean
-      </label>
-      <label>
-        <input type="checkbox" class="chk" value="Secure">
-        Secure
-      </label>
-    </div>
+  <label class="check-item">
+    <input type="checkbox" class="chk" value="Clean">
+    <span>Clean</span>
+  </label>
+
+  <label class="check-item">
+    <input type="checkbox" class="chk" value="Secure">
+    <span>Secure</span>
+  </label>
+   </div>
 
     <!-- Remarks -->
     <label>Remarks</label>
@@ -60,5 +60,6 @@
   <script src="js/app.js"></script>
 </body>
 </html>
+
 
 
