--- a/form.html
+++ b/form.html
@@ -27,17 +27,20 @@
     <!-- Checklist -->
     <label>Checklist</label>
 
+<label>Checklist</label>
+
 <div class="checklist">
-  <div class="check-item">
-    <input type="checkbox" class="chk" id="clean" value="Clean">
-    <label for="clean">Clean</label>
+  <div class="check-row">
+    <span class="check-text">Clean</span>
+    <input type="checkbox" class="chk" value="Clean">
   </div>
 
-  <div class="check-item">
-    <input type="checkbox" class="chk" id="secure" value="Secure">
-    <label for="secure">Secure</label>
+  <div class="check-row">
+    <span class="check-text">Secure</span>
+    <input type="checkbox" class="chk" value="Secure">
   </div>
 </div>
+
 
 
     <!-- Remarks -->
@@ -63,6 +66,7 @@
   <script src="js/app.js"></script>
 </body>
 </html>
+
 
 
 
