--- a/form.html
+++ b/form.html
@@ -25,21 +25,20 @@
     </select>
 
     <!-- Checklist -->
-    <label>Checklist</label>
-
-<label>Checklist</label>
+   <label>Checklist</label>
 
 <div class="checklist">
   <div class="check-row">
-    <span class="check-text">Clean</span>
+    <span>Clean</span>
     <input type="checkbox" class="chk" value="Clean">
   </div>
 
   <div class="check-row">
-    <span class="check-text">Secure</span>
+    <span>Secure</span>
     <input type="checkbox" class="chk" value="Secure">
   </div>
 </div>
+
 
 
 
@@ -66,6 +65,7 @@
   <script src="js/app.js"></script>
 </body>
 </html>
+
 
 
 
