--- a/form.html
+++ b/form.html
@@ -25,22 +25,17 @@
     </select>
 
     <!-- Checklist -->
-   <label>Checklist</label>
-
-<div class="checklist">
-  <div class="check-row">
-    <span>Clean</span>
-    <input type="checkbox" class="chk" value="Clean">
-  </div>
-
-  <div class="check-row">
-    <span>Secure</span>
-    <input type="checkbox" class="chk" value="Secure">
-  </div>
-</div>
-
-
-
+    <label>Checklist</label>
+    <div class="checklist">
+      <label>
+        <input type="checkbox" class="chk" value="Clean">
+        Clean
+      </label>
+      <label>
+        <input type="checkbox" class="chk" value="Secure">
+        Secure
+      </label>
+    </div>
 
     <!-- Remarks -->
     <label>Remarks</label>
@@ -65,9 +60,3 @@
   <script src="js/app.js"></script>
 </body>
 </html>
-
-
-
-
-
-
